[project]
name = "langchain-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "langchain>=1.2.0",
    "langchain-anthropic",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "transformers>=4.57.3",
    "torch",
    "langchain-ollama>=1.0.1",
    "langchain-core>=1.2.5",
    "fastapi[standard]>=0.128.0",
]
